# Demonstration-Project

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  index.html  pyproject.toml  pytest.ini
.github/workflows/: api-tests.yml
allure-results/: 0d25239f-8849-4074-8911-5fefbc329e09-container.json  3f02c625-254c-4d88-ad4c-773278ce112c-result.json  5cf6f149-45a1-4072-a5f4-815b370cbb44-result.json  862b929b-33b9-4696-b846-c751095a7ca6-result.json  8f8b7598-0f7e-4cfe-a851-ee0752d3e32d-result.json  a86f1499-0ea5-46aa-b0ad-7a7db811e8f3-result.json  a973d2e6-a4f5-4792-b8ee-4d0416428f1c-container.json  b0a4d626-365a-4407-894c-4832120a72ee-container.json  b3230c1c-6d1d-43b9-9c67-c82683d9f83f-attachment.txt  b851d658-e7bc-4028-bfee-db492be72cbb-container.json  ba9cedc8-a6a8-439c-ad82-d475f8a1c2ec-result.json  c7f9ea1b-6cfc-4fb8-9fac-99471630b270-result.json  cfa80498-5619-4935-a614-591e0fb55d48-container.json  d23f0d11-aa32-4c5f-b599-afb6c79a2841-result.json
api/: api_request.py  api_response.py
api/character/: character_api.py
api/episode/: episode_api.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 153190d4dde0070f.txt  2bcd19b7806749f1.txt  37417c9043a448ab.json  48845a1f380629d5.json  56f03ee20e080a66.json  657aa897dc87950e.txt  668fae77ff4b1049.txt  68d4236ccaad2520.txt  6db0d8e6f4df4b99.txt  7d3a62214254cf4c.txt  94d8b6709b1c417d.txt  9a00cc6475e97860.json  9b1879682fd9fa7d.txt  a30659bd95af2d4.json  ab21e9d63461759d.json  afc4a6ac1e4c22e2.json  aff8630674761930.txt  b23bba0d33ebb7ed.json  b5186a46cf691ac5.txt  b534dde85d2f23e8.json  be0f79969b9e15ab.json  c041dcad65b76e29.txt  d56104b584fcc03f.txt  d7fb0b52e158ac55.json  e28516e3317c5ffc.txt  e9dd281feaa4d578.json  f0036e3b862e6d86.txt  f57641023caa71bc.txt  f5c74700cffdd5eb.json  (+2 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: api_client.py  logger.py  models.py  test_api.py  test_errors.py
utils/: logger.py  model.py  utils.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+25 files in other folders)
