[project]
name = "api-ui-pytest-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Elena",email = "84013140+ElenaShorohova@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "api_ui_pytest_demo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
allure-pytest = "^2.13.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
